--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>My First Web Page</title>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>This is my very first custom web page. I'm learning HTML!</p>
+  <h1>Welcome to My Website Ms.Gayathri and Mr.Srinivasa</h1>
+  <p>This is your son's very first custom web page. I'm learning HTML!</p>
   <a href="https://google.com" target="_blank">Click here to visit Google</a>
 </body>
 </html>
